# bm

./: .gitignore  .gitmodules  pyproject.toml  requirements.txt
examples/: analysis.ipynb  analysis.py  analysis_lstmed.py  analysis_prophet.py  analysis_prophet_optim.py  analysis_pyod.ipynb  analysis_pyod.py  analysis_skf.ipynb  analysis_skf.py  analysis_skf_base.py  analysis_tranad.py  dsf.py  generate_anomaly.ipynb  generate_anomaly_info.ipynb  monthly_from_weekly.ipynb  read_data.ipynb  read_data_monthly.ipynb  read_save_1.py  read_standardize_data.ipynb  run_all_detectors.py  save_data_fig.py  standardize_data.ipynb  standardize_data.py  tranad.py  tsad.ipynb  tsad.py
examples/read_save/: read_save_1.ipynb
src/: data_process.py  generate_anomaly.py  metric.py  utils.py
src/detector/: base_detector.py  lstmed_detector.py  phophet.py  phophet_detector.py
src/tsbenchmark/: __init__.py  data_process.py  metric.py
src/tsbenchmark/detector/: __init__.py  base_detector.py  lstmed_detector.py  phophet_detector.py  skf_detector.py  tranad_detector.py
